--- a/amp/oia.html
+++ b/amp/oia.html
@@ -473,7 +473,7 @@
                     <br>
                     <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">LOGIN</a>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
+                    <a href="https://www.netmarketingdynamix.com/" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">DAFTAR</a>
                 </div>
             </div>
