--- a/amp/prodeskel.html
+++ b/amp/prodeskel.html
@@ -474,7 +474,7 @@
                     <br>
                     <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">LOGIN PISANGBET</a>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
+                    <a href="https://www.netmarketingdynamix.com/" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">DAFTAR PISANGBET</a>
                 </div>
             </div>
