--- a/amp/sikasep.html
+++ b/amp/sikasep.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="http://sikasep.disdik.bandung.go.id/">
+    <link rel="canonical" href="http://sikasep.disdik.bandung.go.id/pisang/">
     <title>Pisangbet: Permainan Online Slot Thailand Dan Link Slot Gacor 2025 Maxwin</title>
     <meta name="description" content="Pisangbet adalah situs permainan online resmi yang menyediakan slot thailand terpercaya dan link slot gacor terbaru 2025 yang gampang maxwin dengan jam bocoran pola slot gacor hari ini.">
     <meta name="keywords" content="PISANGBET">
@@ -14,7 +14,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="Pisangbet: Permainan Online Slot Thailand Dan Link Slot Gacor 2025 Maxwin">
     <meta property="og:description" content="Pisangbet adalah situs permainan online resmi yang menyediakan slot thailand terpercaya dan link slot gacor terbaru 2025 yang gampang maxwin dengan jam bocoran pola slot gacor hari ini.">
-    <meta property="og:url" content="http://sikasep.disdik.bandung.go.id/">
+    <meta property="og:url" content="http://sikasep.disdik.bandung.go.id/pisang/">
     <meta property="og:site_name" content="PISANGBET">
     <meta property="og:author" content="PISANGBET">
     <meta property="og:image" content="https://i.imgur.com/wzOYhfm.png">
@@ -530,7 +530,7 @@
         </div>
         <hr>
         <div class="footer">
-            &copy; PISANGBET | <a href="http://sikasep.disdik.bandung.go.id/">SLOT GACOR</a>
+            &copy; PISANGBET | <a href="http://sikasep.disdik.bandung.go.id/pisang/">SLOT GACOR</a>
         </div>
     </main>
 </body>
