--- a/amp/unsuri.html
+++ b/amp/unsuri.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <title>SLOT GACOR TERPERCAYA MAXWIN DI 2025 BISA JACKPOT BESAR</title>
-    <meta name="description" content="Rasakan pengalaman terbaik bersama kami di slot gacor terpercaya dijamin maxwin dengan sensasi baru menggunakan server Thailand tahun 2025.">
+    <title>SERVER THAILAND : SLOT GACOR TERPERCAYA MAXWIN DI 2025 BISA DEPOSIT PULSA NO 1</title>
+    <meta name="description" content="Rasakan pengalaman terbaik bersama kami di slot gacor terpercaya dijamin maxwin dengan sensasi baru menggunakan server Thailand tahun 2025. Temukan beragam permainan dari penyedia ternama seperti Pragmatic Play dan PG Soft untuk mendapatkan keuntungan yang sensasional. Tersedia juga scatter hitam untuk kamu yang ingin melipatkan kemenangan hingga x1000 dan terbukti gampang menang meskipun pemain slot deposit pulsa.">
     <meta name="keywords" content="pisangbet, pisangbet login, pisangbet daftar, situs pisangbet, link pisangbet, pisangbet link alternatif">
     <meta name="robots" content="index, follow">
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
     <meta content="width" name="MobileOptimized">
-    <meta property="og:title" content="SLOT GACOR TERPERCAYA MAXWIN DI 2025 BISA JACKPOT BESAR">
-    <meta property="og:description" content="Rasakan pengalaman terbaik bersama kami di slot gacor terpercaya dijamin maxwin dengan sensasi baru menggunakan server Thailand tahun 2025.">
+    <meta property="og:title" content="SERVER THAILAND : SLOT GACOR TERPERCAYA MAXWIN DI 2025 BISA DEPOSIT PULSA NO 1">
+    <meta property="og:description" content="Rasakan pengalaman terbaik bersama kami di slot gacor terpercaya dijamin maxwin dengan sensasi baru menggunakan server Thailand tahun 2025. Temukan beragam permainan dari penyedia ternama seperti Pragmatic Play dan PG Soft untuk mendapatkan keuntungan yang sensasional. Tersedia juga scatter hitam untuk kamu yang ingin melipatkan kemenangan hingga x1000 dan terbukti gampang menang meskipun pemain slot deposit pulsa.">
     <meta property="og:url" content="https://journal.unsuri.ac.id/">
     <meta property="og:site_name" content="SLOT GACOR">
     <meta property="og:author" content="SLOT GACOR">
