--- a/amp/unsuri.html
+++ b/amp/unsuri.html
@@ -13,7 +13,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="SERVER THAILAND : SLOT GACOR TERPERCAYA MAXWIN DI 2025 BISA DEPOSIT PULSA NO 1">
     <meta property="og:description" content="Rasakan pengalaman terbaik bersama kami di slot gacor terpercaya dijamin maxwin dengan sensasi baru menggunakan server Thailand tahun 2025. Temukan beragam permainan dari penyedia ternama seperti Pragmatic Play dan PG Soft untuk mendapatkan keuntungan yang sensasional. Tersedia juga scatter hitam untuk kamu yang ingin melipatkan kemenangan hingga x1000 dan terbukti gampang menang meskipun pemain slot deposit pulsa.">
-    <meta property="og:url" content="https://journal.unsuri.ac.id/">
+    <meta property="og:url" content="#">
     <meta property="og:site_name" content="SLOT GACOR">
     <meta property="og:author" content="SLOT GACOR">
     <meta property="og:image" content="https://i.imgur.com/alPP9vJ.png">
@@ -27,7 +27,7 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://i.imgur.com/3PrWtVE.png">
-    <link rel="canonical" href="https://journal.unsuri.ac.id/">
+    <link rel="canonical" href="#">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -452,7 +452,7 @@
                     <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
                                 src="https://photosaya.io/images/2024/07/11/livechat.png" width="20px"></button></a>
                 </div>
-                <div><a href="https://journal.unsuri.ac.id/" target="_blank" rel="noopener noreferrer nofollow">
+                <div><a href="#" target="_blank" rel="noopener noreferrer nofollow">
                         <amp-img height="300" width="300" alt="PISANGBET"
                             src="https://i.imgur.com/alPP9vJ.png"></amp-img></a>
                 </div>
@@ -478,7 +478,7 @@
                 </div>
             </div>
             <span style="text-align: center">2025 <strong><a
-                href="https://journal.unsuri.ac.id/">SLOT THAILAND</a></strong></span>
+                href="#">SLOT THAILAND</a></strong></span>
 </div>
 </main>
 </body> 
