--- a/amp/prodeskel.html
+++ b/amp/prodeskel.html
@@ -14,7 +14,7 @@
     <meta content="width" name="MobileOptimized">
     <meta property="og:title" content="Pisangbet - Slot Pulsa Semua Provider Dengan Link Slot Gacor Anti Rungkad">
     <meta property="og:description" content="Pisangbet terkenal sebagai situs slot pulsa yang bisa melakukan transaksi deposit dengan menggunakan pulsa dari semua provider, minimal bet 200 rupiah untuk permainan slot online. Pisangbet menyediakan link slot gacor hari ini yang gampang maxwin anti rungkad.">
-    <meta property="og:url" content="https://e-prodeskel.kemendagri.go.id/">
+    <meta property="og:url" content="#">
     <meta property="og:site_name" content="PISANGBET">
     <meta property="og:author" content="PISANGBET">
     <meta property="og:image" content="https://i.imgur.com/alPP9vJ.png">
@@ -28,7 +28,7 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://i.imgur.com/3PrWtVE.png">
-    <link rel="canonical" href="https://e-prodeskel.kemendagri.go.id/">
+    <link rel="canonical" href="#">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -453,7 +453,7 @@
                     <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
                                 src="https://photosaya.io/images/2024/07/11/livechat.png" width="20px"></button></a>
                 </div>
-                <div><a href="https://e-prodeskel.kemendagri.go.id/" target="_blank" rel="noopener noreferrer nofollow">
+                <div><a href="#" target="_blank" rel="noopener noreferrer nofollow">
                         <amp-img height="300" width="300" alt="PISANGBET"
                             src="https://i.imgur.com/alPP9vJ.png"></amp-img></a>
                 </div>
@@ -479,7 +479,7 @@
                 </div>
             </div>
             <span style="text-align: center">2025 <strong><a
-                href="https://e-prodeskel.kemendagri.go.id/">PISANGBET</a></strong> SEO JAGABRAND</span>
+                href="#">PISANGBET</a></strong> SEO JAGABRAND</span>
 </div>
 </main>
 </body> 
