--- a/amp/prodeskel.html
+++ b/amp/prodeskel.html
@@ -444,13 +444,13 @@
             <div class="pro-PISANGBET"><br><amp-img height="105" width="416" alt="PISANGBET"
                     src="https://i.imgur.com/X0AQpxf.png"></amp-img><br>
                 <div class="Pro-PISANGBET-container block1">
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky"><button
                             class="Pro-PISANGBET"><img src="https://photosaya.io/images/2024/07/11/login.png" width="20px"></button></a>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
                                 src="https://photosaya.io/images/2024/07/11/daftar.png" width="20px"></button></a>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
                                 src="https://photosaya.io/images/2024/07/17/whatsapp.png" width="20px"></button></a>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky"><button class="Pro-PISANGBET"><img
                                 src="https://photosaya.io/images/2024/07/11/livechat.png" width="20px"></button></a>
                 </div>
                 <div><a href="#" target="_blank" rel="noopener noreferrer nofollow">
@@ -459,7 +459,7 @@
                 </div>
                 <h2>PISANGBET</h2>
                 <div class="s-p">
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow">
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow">
                         <button class="btn2">
                             <strong>LINK ALTERNATIF</strong>
                             <div id="container-stars">
@@ -472,7 +472,7 @@
                         </button>
                     </a>
                     <br>
-                    <a href="https://pisangbetngopi.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
+                    <a href="https://pisangbetpaten.pro/?ref=lucyinditsky" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">LOGIN PISANGBET</a>
                     <a href="https://www.netmarketingdynamix.com/" target="_blank" rel="noopener noreferrer nofollow"
                         class="block">DAFTAR PISANGBET</a>
