--- a/amp/prodeskel.html
+++ b/amp/prodeskel.html
@@ -1,23 +1,22 @@
-
 <!DOCTYPE html>
 <html amp lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <title>Pisangbet - Slot Pulsa Semua Provider Dengan Link Slot Gacor Anti Rungkad</title>
-    <meta name="description" content="Pisangbet terkenal sebagai situs slot pulsa yang bisa melakukan transaksi deposit dengan menggunakan pulsa dari semua provider, minimal bet 200 rupiah untuk permainan slot online. Pisangbet menyediakan link slot gacor hari ini yang gampang maxwin anti rungkad.">
+    <title>PISANGBET - Kasta Tertinggi Slot88 Server Thailand Premium Anti Rungkad Pasti Gacor</title>
+    <meta name="description" content="PISANGBET adalah kasta tertinggi slot88 resmi yang menggunakan server thailand premium anti rungkad yang sudah bisa dipastikan pasti gacor untuk semua permainan slot online yang tersedia di situs pisangbet.">
     <meta name="keywords" content="pisangbet, pisangbet login, pisangbet daftar, situs pisangbet, link pisangbet, pisangbet link alternatif">
     <meta name="robots" content="index, follow">
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
     <meta content="width" name="MobileOptimized">
-    <meta property="og:title" content="Pisangbet - Slot Pulsa Semua Provider Dengan Link Slot Gacor Anti Rungkad">
-    <meta property="og:description" content="Pisangbet terkenal sebagai situs slot pulsa yang bisa melakukan transaksi deposit dengan menggunakan pulsa dari semua provider, minimal bet 200 rupiah untuk permainan slot online. Pisangbet menyediakan link slot gacor hari ini yang gampang maxwin anti rungkad.">
+    <meta property="og:title" content="PISANGBET - Kasta Tertinggi Slot88 Server Thailand Premium Anti Rungkad Pasti Gacor">
+    <meta property="og:description" content="PISANGBET adalah kasta tertinggi slot88 resmi yang menggunakan server thailand premium anti rungkad yang sudah bisa dipastikan pasti gacor untuk semua permainan slot online yang tersedia di situs pisangbet.">
     <meta property="og:url" content="#">
     <meta property="og:site_name" content="PISANGBET">
     <meta property="og:author" content="PISANGBET">
-    <meta property="og:image" content="https://i.imgur.com/alPP9vJ.png">
+    <meta property="og:image" content="https://i.imgur.com/rdXmUva.png">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
     <meta name="rating" content="general">
@@ -455,7 +454,7 @@
                 </div>
                 <div><a href="#" target="_blank" rel="noopener noreferrer nofollow">
                         <amp-img height="300" width="300" alt="PISANGBET"
-                            src="https://i.imgur.com/alPP9vJ.png"></amp-img></a>
+                            src="https://i.imgur.com/rdXmUva.png"></amp-img></a>
                 </div>
                 <h2>PISANGBET</h2>
                 <div class="s-p">
